# dp-data-pipeline

./: .gitignore  .gitmodules  CLAUDE.md  README.md  pyproject.toml
configs/: sft.toml  synth.toml
outputs/: README.md
plots/: README.md
scripts/: README.md  analyze_correlation.py  analyze_seq_length.py  config.py  convert_generation_to_evals.py  filter_and_enrich_by_difficulty.py  filter_dataset.py  filter_unique_best.py  generate_prompts.py  keep_best.py  remove_reasoning.py  upload_datasets.py
